--- a/Docs/2_Justification.tex
+++ b/Docs/2_Justification.tex
@@ -1,2 +1,7 @@
 \section{Justification}
 
+Quantum cryptography represents a cutting-edge approach to secure information sharing, leveraging the properties of quantum mechanics. However, the high error rate inherent in quantum communication requires effective modeling to enhance the performance of quantum key distribution.
+One way to do it is to focus on the quantum mechanism to produce the key and the other one is to concentrate the efforts on error correction techniques such as privacy amplification\cite{nielsen2010quantum}.
+
+
+This work directs its focus towards the influence of Fine Structure Splitting and orientation of measurement into the robustness and efficiency of quantum key distribution protocol E91 by means of quantum computational algorithms to replicate the experimental set up for producing and measuring the pair of anticorrelated spin particles
