--- a/Docs/6_Framework.tex
+++ b/Docs/6_Framework.tex
@@ -10,12 +10,11 @@ talk about implementation schemes, based on spin, based on photons.
 
 \subsubsection{E91}
 
-Cite Ekerd 1991 \cite{ekert1991quantum} and futher work (implementation and alternatives like EPR states)
+Cite Ekerd 1991 \cite{ekert1991quantum} and futher work (implementation and alternatives like EPR states into the ekert protocol)
 
 \subsection{Production of $\gamma$ bell states}
 
 how to produce entangled states by means of hetero-structure like quantum dots or SPDC
-
 
 how to convert spin implementation into polarization language and quantum computing implementation
 
