--- a/Docs/refs.bib
+++ b/Docs/refs.bib
@@ -18,3 +18,13 @@
 	year={2010},
 	publisher={Cambridge university press}
 }
+@article{hernandez2023effects,
+	title={Effects of the Exciton Fine Structure Splitting on the Entanglement-Based Quantum Key Distribution},
+	author={Hern{\'a}ndez-Borda, Adri{\'a}n Felipe and Rojas-Sep{\'u}lveda, Mar{\'\i}a Paula and Ram{\'\i}rez-G{\'o}mez, Hanz Yecid},
+	journal={Condensed Matter},
+	volume={8},
+	number={4},
+	pages={90},
+	year={2023},
+	publisher={MDPI}
+}
