--- a/Docs/3_Problem_Statement.tex
+++ b/Docs/3_Problem_Statement.tex
@@ -1,8 +1,7 @@
 \section{Problem statement}
 
-Quantum Entanglement is necessary for supporting quantum key distribution, but in the experiment, several physical effects cause decoherence which disables the whole Protocol.
-These effects are: the Fine Structure Splitting due to the generation of optical singlet states by radiative cascade (biexciton to exciton exciton to ground) on quantum dots {\huge Cite This}; on the other hand, the selection of the orientation of the analyzer for measuring the states has a well known aftereffect on the anti-correlation probability {\huge cite grynberg, aspect, fabre}.
-In this sense it is necesary to study this effects on the robustness of the key generated via E91 protocol with the aim of simulation of quantum algorithms
+Quantum Entanglement is necessary for supporting quantum key distribution; nevertheless, when it is physically implementated by an experimental set up, there is a reduction on the reliability of the key generated due to several physical effects that cause decoherence, thus the protocol  becomes ineficcient at least in a percentage {\huge look for experimental implementation}.
+When implementing quantum key distribution protocol E91 in a photon polarization scheme based on radiative cascade from the biexciton-exciton to exciton-ground the effects that reduces the reliability of the key generated can be: the decoherence caused by Fine Structure Splitting \cite{hernandez2023effects}; and in adition the selection of the orientation of the analyzer for measuring the states which has a well known aftereffect on the anti-correlation probability of the quantum states transmitted\cite{grynberg2010introduction}. Consequently this work looks for the answer to the following question. what is the influence of the exciton fine structure splitting and measurement orientations on the robustness of cryptographic keys generated via the quantum key distribution protocol E91?
 
 
 
