--- a/Docs/6_Framework.tex
+++ b/Docs/6_Framework.tex
@@ -2,9 +2,12 @@
 
 \subsection{Quantum cryptography and quantum key distribution}
 
-Talk about its origin and minimum requirements to build a quantum key distribution protocol
 
-talk about implementation schemes, based on spin, based on photons.
+
+Quantum cryptography is the set of techniques or methods to distribute a secret key  between two parties by mean of a quantum channel, that can be in conjunction with an classical channel, minimizing the probability to eavesdrop the information shared without  disturbing the quantum information in such a way that key becomes secure. \cite{bennett2014quantum}
+
+In principle, the quantum channel can be a quantum system in which the information or key string could be encoded, e.g., spin particles or photon polarization scheme. Leveraging quantum entanglement enables the distribution of the secret key. Should there be any attempt at eavesdropping, the entanglement would be disrupted.
+
 
 \subsubsection{Bell Theorem and CHSH}
 
