--- a/Docs/refs.bib
+++ b/Docs/refs.bib
@@ -28,3 +28,12 @@
 	year={2023},
 	publisher={MDPI}
 }
+@article{bennett2014quantum,
+  title={Quantum cryptography: Public key distribution and coin tossing},
+  author={Bennett, Charles H and Brassard, Gilles},
+  journal={Theoretical computer science},
+  volume={560},
+  pages={7--11},
+  year={2014},
+  publisher={Elsevier}
+}
