--- a/Docs/refs.bib
+++ b/Docs/refs.bib
@@ -37,3 +37,13 @@
   year={2014},
   publisher={Elsevier}
 }
+@article{bell1964einstein,
+  title={On the einstein podolsky rosen paradox},
+  author={Bell, John S},
+  journal={Physics Physique Fizika},
+  volume={1},
+  number={3},
+  pages={195},
+  year={1964},
+  publisher={APS}
+}
