--- a/Docs/6_Framework.tex
+++ b/Docs/6_Framework.tex
@@ -8,8 +8,25 @@ Quantum cryptography is the set of techniques or methods to distribute a secret 
 
 In principle, the quantum channel can be a quantum system in which the information or key string could be encoded, e.g., spin particles or photon polarization scheme. Leveraging quantum entanglement enables the distribution of the secret key. Should there be any attempt at eavesdropping, the entanglement would be disrupted.
 
+\subsection{Quantum Key Distribution Protocol E91}
 
-\subsection{Bell Theorem and CHSH}
+It is a spin based quantum key distribution protocol proposed by Artur Ekert in 1991 \cite{ekert1991quantum} which is a modification of the BB84 protocol \cite{ilic2007ekert} which uses Bell inequiatilties tested over Maximally entangled quantum states called singlet
+\begin{equation}\label{eqn:singlet_state}
+\left\vert\psi\right\rangle\,
+=\,
+\dfrac{1}{\sqrt{2}} \left[ \left\vert \Uparrow \downarrow \right\rangle - \left\vert \Uparrow \downarrow \right\rangle \right]
+\end{equation}
+
+where the state $\left\vert\uparrow\Downarrow\right\rangle$ represents the spin up for Alice particle and spin down for Bob particle. Particles are sent along $Z$ axis towards Alice and Bob separadtely; after receiving the incoming spin particle, both of them measure the state with a spin analyzer whose direction makes an angle ($\phi$) with the vertical $X$ axis. Alice can set up randomly the analizer according to the directions $\phi_{i}^{(a)}=\{0,0\pi/4,\pi/2\}$ and likewise Bob can choose directions $\phi_{i}^{(b)}=\{\pi/4,\pi/2,3\pi/4\}$, for $i=1,2,3$ (see figure \ref{fig:directions_alice_bob_ekert}). Thereupon, Alice and Bob register the chosen direction  the measurement obtained
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=.6\textwidth]{"./Basis_direction.png"}
+\caption{Allowed directions for Alice (Cyan) and Bob (Red).}
+\label{fig:directions_alice_bob_ekert}
+\end{figure}
+
+\subsubsection{Bell Theorem and CHSH}
 
 Bell theorem \cite{bell1964einstein} provides a incompatibility between the predictions of quantum mechanics and the existence of local hidden variable theory by  mean of inequalities, such mathematical formulation is known as Bell inequalities. In 1969 Clauser, Horne Shimony and Holt, \cite{clauser1969proposed}, stablished an extension of the bell theorem and an inequality by mean of an experminent based on the correlation of polarization of optical photons.
 
@@ -33,9 +50,7 @@ for features $a'$ and $b'$, but, by\ref{eqn:correlation_function_CHSH} the expec
 \end{equation}
 
 
-\subsection{E91}
 
-Cite Ekerd 1991 \cite{ekert1991quantum} and futher work (implementation and alternatives like EPR states into the ekert protocol)
 
 \subsection{Production of $\gamma$ bell states}
 
