--- a/Docs/refs.bib
+++ b/Docs/refs.bib
@@ -57,3 +57,11 @@
   year={1969},
   publisher={APS}
 }
+@article{ilic2007ekert,
+  title={The ekert protocol},
+  author={Ilic, Nikolina},
+  journal={Journal of Phy334},
+  volume={1},
+  pages={22},
+  year={2007}
+}
