--- a/main.tex
+++ b/main.tex
@@ -1,12 +1,17 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
- \usepackage[T1]{fontenc}
+\usepackage[T1]{fontenc}
 \usepackage{graphicx} % Required for inserting imagesInvestigating Exciton Fine Structure Splitting and Measurement Orientations in the Robustness of Cryptographic Keys via Quantum Key Distribution Protocol E91
 \usepackage[english]{babel}
 \usepackage{helvet}
 \usepackage{tabularx}
 \usepackage{geometry}
 \usepackage{dirtytalk}
+\usepackage{graphicx}
+\usepackage{float}
+
+\graphicspath{ {./Images/} }
+\usepackage{amsmath,amsfonts,amsthm,amssymb}
 %-------------------------------------------
 \geometry{letterpaper,margin=2cm}
 
